sink/marcconv: deliver and report one item at a time (DI-3014)
Migrate from MessageConsumerAdapter to SinkMessageConsumerAdapter. job-store
dispatches one message per item, and the sink implements deliverItem instead
of assembling a DELIVERED chunk. Header reading, result reporting and the
tracking-id scope move to the framework.

The sink aggregates a whole job before delivering anything, so it overrides
usesDeliveryWatermark() to false. It still reports every item, since the
DELIVERING counters and the per-job gate are driven by those reports.

Conversion blocks move from one row per chunk to one row per item. Items of
a chunk are converted concurrently and in any order unless they share a
correlationKey, so no writer can produce a row holding a whole chunk's
output. Ordering the blocks on chunk id then item id leaves the uploaded
file's record order what it was, and the finalizer buffers its appends to
file-store rather than making one per row.

Drop the five second sleep before finalization. It guessed at a window the
chunk protocol opened by reporting a result before committing the sink's own
transaction. deliverItem commits first and the framework reports afterwards,
so the termination item is released only against durable blocks.

Store the job's conversion parameters with ON CONFLICT DO NOTHING. Each
instance stores the parameters of the first record it saw, so the previous
read-then-write left them racing to insert the same row, and the loser's
constraint violation aborted the item it was converting along with it.