@@ -2,7 +2,6 @@ package dk.dbc.dataio.sink.marcconv.entity;
 
 import dk.dbc.dataio.commons.conversion.ConversionMetadata;
 import dk.dbc.dataio.commons.conversion.ConversionParam;
-import dk.dbc.dataio.commons.types.Chunk;
 import dk.dbc.dataio.commons.types.ChunkItem;
 import dk.dbc.dataio.commons.types.JobSpecification;
 import dk.dbc.dataio.commons.utils.jobstore.JobStoreServiceConnector;
@@ -20,14 +19,17 @@ import dk.dbc.dataio.sink.marcconv.IntegrationTest;
 import jakarta.persistence.PersistenceException;
 import org.junit.Before;
 import org.junit.Test;
-import org.mockito.InOrder;
-import org.mockito.Mockito;
+import org.mockito.ArgumentCaptor;
 
+import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.CoreMatchers.is;
+import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.fail;
@@ -42,6 +44,13 @@ import static org.mockito.Mockito.when;
 public class ConversionFinalizerIT extends IntegrationTest {
     private static final String FILE_STORE_URL = "http://filestore";
     private static final String FILE_ID = "123456789";
+
+    private final ChunkItem terminationItem = new ChunkItem()
+            .withId(7)
+            .withTrackingId("tracked")
+            .withType(ChunkItem.Type.JOB_END)
+            .withStatus(ChunkItem.Status.SUCCESS)
+            .withData("termination");
 
     private final JobInfoSnapshot jobInfoSnapshot = new JobInfoSnapshot()
             .withJobId(42)
@@ -80,31 +89,21 @@ public class ConversionFinalizerIT extends IntegrationTest {
     }
 
     @Test
-    public void handleTerminationChunk() throws FileStoreServiceConnectorException {
-        ConversionBlock block0 = new ConversionBlock();
-        block0.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 0));
-        block0.setBytes(StringUtil.asBytes("0"));
-        ConversionBlock block1 = new ConversionBlock();
-        block1.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 1));
-        block1.setBytes(StringUtil.asBytes("1"));
-        ConversionBlock block2 = new ConversionBlock();
-        block2.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 2));
-        block2.setBytes(StringUtil.asBytes("2"));
-
-        env().getPersistenceContext().run(() -> {
-            env().getEntityManager().persist(block2);
-            env().getEntityManager().persist(block1);
-            env().getEntityManager().persist(block0);
-        });
+    public void finalizeJob() throws FileStoreServiceConnectorException {
+        persistBlocks(
+                newBlock(0, 0, "a"),
+                newBlock(0, 1, "b"),
+                newBlock(1, 0, "c"));
 
         ConversionFinalizer conversionFinalizer = newConversionFinalizerBean();
-        Chunk chunk = new Chunk(jobInfoSnapshot.getJobId(), 3, Chunk.Type.DELIVERED);
-        Chunk result = env().getPersistenceContext().run(() ->
-                conversionFinalizer.handleTerminationChunk(chunk, env().getEntityManager()));
+        ChunkItem result = env().getPersistenceContext().run(() ->
+                conversionFinalizer.finalizeJob(jobInfoSnapshot.getJobId(), terminationItem, env().getEntityManager()));
 
-        InOrder orderVerifier = Mockito.inOrder(fileStoreServiceConnector);
-        orderVerifier.verify(fileStoreServiceConnector).appendToFile(FILE_ID, block1.getBytes());
-        orderVerifier.verify(fileStoreServiceConnector).appendToFile(FILE_ID, block2.getBytes());
+        // The blocks of a job are uploaded as one file, in ascending chunk and item order,
+        // and buffered into a single call since they are well below the buffer size.
+        verify(fileStoreServiceConnector).addFile(any(InputStream.class));
+        verify(fileStoreServiceConnector, times(0)).appendToFile(any(), any());
+        assertThat("uploaded bytes", uploadedBytes(), is("abc"));
 
         ConversionMetadata expectedMetadata = new ConversionMetadata(ConversionFinalizer.ORIGIN)
                 .withJobId(jobInfoSnapshot.getJobId())
@@ -112,15 +111,15 @@ public class ConversionFinalizerIT extends IntegrationTest {
                 .withFilename(jobInfoSnapshot.getSpecification().getAncestry().getDatafile());
         verify(fileStoreServiceConnector).addMetadata(FILE_ID, expectedMetadata);
 
-        assertThat("result chunk size", result.getItems().size(),
-                is(1));
-        assertThat("result chunk job", result.getJobId(),
-                is(jobInfoSnapshot.getJobId()));
-        assertThat("result chunk id", result.getChunkId(),
-                is(3L));
-        assertThat("result chunk status", result.getItems().get(0).getStatus(),
+        assertThat("result status", result.getStatus(),
                 is(ChunkItem.Status.SUCCESS));
-        assertThat("result chunk data", StringUtil.asString(result.getItems().get(0).getData()),
+        assertThat("result type", result.getType().getFirst(),
+                is(ChunkItem.Type.JOB_END));
+        assertThat("result id", result.getId(),
+                is(terminationItem.getId()));
+        assertThat("result tracking id", result.getTrackingId(),
+                is(terminationItem.getTrackingId()));
+        assertThat("result data", StringUtil.asString(result.getData()),
                 is(String.join("/", FILE_STORE_URL, "files", FILE_ID)));
 
         List<ConversionBlock> blocks = env().getEntityManager()
@@ -132,9 +131,42 @@ public class ConversionFinalizerIT extends IntegrationTest {
     }
 
     @Test
+    public void blocksBeyondTheBufferSizeAreAppended() throws FileStoreServiceConnectorException {
+        byte[] firstHalf = filler('x');
+        byte[] secondHalf = filler('y');
+        ConversionBlock block0 = new ConversionBlock();
+        block0.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 0, 0));
+        block0.setBytes(firstHalf);
+        ConversionBlock block1 = new ConversionBlock();
+        block1.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 0, 1));
+        block1.setBytes(secondHalf);
+        persistBlocks(block0, block1);
+
+        ConversionFinalizer conversionFinalizer = newConversionFinalizerBean();
+        env().getPersistenceContext().run(() ->
+                conversionFinalizer.finalizeJob(jobInfoSnapshot.getJobId(), terminationItem, env().getEntityManager()));
+
+        verify(fileStoreServiceConnector).addFile(any(InputStream.class));
+        verify(fileStoreServiceConnector).appendToFile(eq(FILE_ID), any(byte[].class));
+    }
+
+    @Test
+    public void jobWithoutConversionOutputIsFailed() throws FileStoreServiceConnectorException {
+        ConversionFinalizer conversionFinalizer = newConversionFinalizerBean();
+        ChunkItem result = env().getPersistenceContext().run(() ->
+                conversionFinalizer.finalizeJob(jobInfoSnapshot.getJobId(), terminationItem, env().getEntityManager()));
+
+        verify(fileStoreServiceConnector, times(0)).addFile(any());
+        verify(fileStoreServiceConnector, times(0)).addMetadata(any(), any());
+        assertThat("result status", result.getStatus(), is(ChunkItem.Status.FAILURE));
+        assertThat("result type", result.getType().getFirst(), is(ChunkItem.Type.JOB_END));
+        assertThat("result diagnostics", result.getDiagnostics(), is(notNullValue()));
+    }
+
+    @Test
     public void conversionParamOverrideAgencyId() throws FileStoreServiceConnectorException {
         ConversionBlock block0 = new ConversionBlock();
-        block0.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 0));
+        block0.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 0, 0));
         block0.setBytes(StringUtil.asBytes("0"));
 
         ConversionParam param = new ConversionParam()
@@ -148,11 +180,11 @@ public class ConversionFinalizerIT extends IntegrationTest {
         });
 
         ConversionFinalizer conversionFinalizer = newConversionFinalizerBean();
-        Chunk chunk = new Chunk(jobInfoSnapshot.getJobId(), 0, Chunk.Type.DELIVERED);
-        env().getPersistenceContext().run(() -> conversionFinalizer.handleTerminationChunk(chunk, env().getEntityManager()));
+        env().getPersistenceContext().run(() ->
+                conversionFinalizer.finalizeJob(jobInfoSnapshot.getJobId(), terminationItem, env().getEntityManager()));
 
         StoredConversionParam storedConversionParam = env().getPersistenceContext().run(() ->
-                env().getEntityManager().find(StoredConversionParam.class, Math.toIntExact(chunk.getJobId())));
+                env().getEntityManager().find(StoredConversionParam.class, jobInfoSnapshot.getJobId()));
         assertThat("StoredConversionParam", storedConversionParam, is(nullValue()));
 
         ConversionMetadata expectedMetadata = new ConversionMetadata(ConversionFinalizer.ORIGIN)
@@ -174,9 +206,8 @@ public class ConversionFinalizerIT extends IntegrationTest {
                         new ConversionFinalizer.ExistingFile(FILE_ID)));
 
         ConversionFinalizer conversionFinalizer = newConversionFinalizerBean();
-        Chunk chunk = new Chunk(jobInfoSnapshot.getJobId(), 3, Chunk.Type.DELIVERED);
         env().getPersistenceContext().run(() ->
-                conversionFinalizer.handleTerminationChunk(chunk, env().getEntityManager()));
+                conversionFinalizer.finalizeJob(jobInfoSnapshot.getJobId(), terminationItem, env().getEntityManager()));
 
         // verify no uploading to file-store
         verify(fileStoreServiceConnector, times(0)).addFile(any());
@@ -190,16 +221,15 @@ public class ConversionFinalizerIT extends IntegrationTest {
                 .thenThrow(new PersistenceException("died"));
 
         ConversionBlock block0 = new ConversionBlock();
-        block0.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 0));
+        block0.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 0, 0));
         block0.setBytes(StringUtil.asBytes("0"));
 
         env().getPersistenceContext().run(() -> env().getEntityManager().persist(block0));
 
         ConversionFinalizer conversionFinalizer = newConversionFinalizerBean();
-        Chunk chunk = new Chunk(jobInfoSnapshot.getJobId(), 3, Chunk.Type.DELIVERED);
         try {
             env().getPersistenceContext().run(() ->
-                    conversionFinalizer.handleTerminationChunk(chunk, env().getEntityManager()));
+                    conversionFinalizer.finalizeJob(jobInfoSnapshot.getJobId(), terminationItem, env().getEntityManager()));
             fail("no RuntimeException thrown");
         } catch (RuntimeException ignored) {
         }
@@ -213,21 +243,55 @@ public class ConversionFinalizerIT extends IntegrationTest {
                 .when(fileStoreServiceConnector).addMetadata(any(), any());
 
         ConversionBlock block0 = new ConversionBlock();
-        block0.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 0));
+        block0.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), 0, 0));
         block0.setBytes(StringUtil.asBytes("0"));
 
         env().getPersistenceContext().run(() -> env().getEntityManager().persist(block0));
 
         ConversionFinalizer conversionFinalizer = newConversionFinalizerBean();
-        Chunk chunk = new Chunk(jobInfoSnapshot.getJobId(), 3, Chunk.Type.DELIVERED);
         try {
             env().getPersistenceContext().run(() ->
-                    conversionFinalizer.handleTerminationChunk(chunk, env().getEntityManager()));
+                    conversionFinalizer.finalizeJob(jobInfoSnapshot.getJobId(), terminationItem, env().getEntityManager()));
             fail("no RuntimeException thrown");
         } catch (RuntimeException ignored) {
         }
 
         verify(fileStoreServiceConnector).deleteFile(FILE_ID);
+    }
+
+    private ConversionBlock newBlock(int chunkId, int itemId, String bytes) {
+        ConversionBlock block = new ConversionBlock();
+        block.setKey(new ConversionBlock.Key(jobInfoSnapshot.getJobId(), chunkId, itemId));
+        block.setBytes(StringUtil.asBytes(bytes));
+        return block;
+    }
+
+    /**
+     * Persists the blocks in reverse order, so that a test asserting on the order they are
+     * uploaded in cannot be passed by the order they were written in
+     */
+    private void persistBlocks(ConversionBlock... blocks) {
+        env().getPersistenceContext().run(() -> {
+            for (int i = blocks.length - 1; i >= 0; i--) {
+                env().getEntityManager().persist(blocks[i]);
+            }
+        });
+    }
+
+    private byte[] filler(char c) {
+        byte[] bytes = new byte[ConversionFinalizer.UPLOAD_BUFFER_SIZE];
+        Arrays.fill(bytes, (byte) c);
+        return bytes;
+    }
+
+    private String uploadedBytes() throws FileStoreServiceConnectorException {
+        ArgumentCaptor<InputStream> captor = ArgumentCaptor.forClass(InputStream.class);
+        verify(fileStoreServiceConnector).addFile(captor.capture());
+        try {
+            return new String(captor.getValue().readAllBytes(), StandardCharsets.UTF_8);
+        } catch (IOException e) {
+            throw new IllegalStateException(e);
+        }
     }
 
     private ConversionFinalizer newConversionFinalizerBean() {
